Añadir UI HTML y actualizar FastAPI backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-fastapi==0.115.2
-uvicorn==0.30.6
-requests==2.32.3
-python-dotenv==1.0.1
-pydantic==2.9.2
-openai==0.28.1
-starlette==0.37.2
+fastapi
+uvicorn
+requests
+python-dotenv
